[package]
name = "rust_advance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
futures = "0.3.28"
tokio  ="1.28.0"
log = "0.4.17"
log4rs ="1.2.0"
serde ="1.0.160"
serde_yaml ="0.9.21"